made claim button always visible and some CSS fix for disabled state of button

--- a/src/renderer/components/WalletViews/Balance/Balance.css
+++ b/src/renderer/components/WalletViews/Balance/Balance.css
@@ -80,10 +80,12 @@ h5{
   border-color: #430961;
 }
 
-.btn:hover {
+.btn:not(:disabled):hover {
   color: white;
 }
-
+.btn.disabled, .btn:disabled {
+  cursor: not-allowed;
+}
 .loader{
   margin-top: 25%;
 }
